[package]
name = "rodbus"
version = "0.1.1"
authors = ["Adam Crain <jadamcrain@automatak.com>", "Émile Grégoire <emile@automatak.com>"]
edition = "2018"
license = "GPL-3.0-only"
description = "A high-performance implementation of the Modbus protocol using Tokio and async/await"
keywords = ["modbus", "ics", "industrial", "plc", "security"]
categories = ["network-programming"]
repository = "https://www.github.com/automatak/rodbus"
readme = "../README.md"

[badges]
codecov = { repository = "automatak/rodbus", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
tracing = "0.1"
tracing-futures = "0.2"
tokio = { version = "^0.2.20", features = ["tcp", "sync", "io-util", "time", "rt-core", "rt-threaded", "macros"]}
no-panic = { version = "0.1", optional = true }

[dev-dependencies]
tokio-test = "0.2"
tracing-subscriber = "0.2"
simple_logger = "1.3"