[package]
name = "runtime"
version = "0.1.1"
authors = ["Adam Crain <jadamcrain@automatak.com>", "Émile Grégoire <emile@automatak.com>"]
edition = "2018"
license = "GPL-3.0-only"
description = "Runtime abstraction"
repository = "https://www.github.com/automatak/rodbus"
readme = "../README.md"

[badges]
codecov = { repository = "automatak/rodbus", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
tokio = { version = "^0.2.20", features = ["tcp", "sync", "io-util", "time", "rt-core", "rt-threaded", "macros"]}


